--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
     </section><!-- End Team Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
+    <section id="pricing" class="pricing" style="display: none;">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -710,7 +710,7 @@
     </section><!-- End Frequently Asked Questions Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact" style="display: none;">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
