--- a/index.html
+++ b/index.html
@@ -490,11 +490,12 @@
 
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3>Quote Now</h3>
+            <p><b>24/7 Support :</b> 
+              Our major aim is to provide best service irrespective of time. A call/email at any time, We are always present for its clients. Understanding the importance of patent filing on time, responding to our clients is our prior significance in order to serve them at the best.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
+            <a class="cta-btn align-middle" href="#">Order Now</a>
           </div>
         </div>
 
@@ -507,8 +508,7 @@
 
         <div class="section-title">
           <h2>Team</h2>
-          <p><b>24/7 Support :</b> 
-            Our major aim is to provide best service irrespective of time. A call/email at any time, We are always present for its clients. Understanding the importance of patent filing on time, responding to our clients is our prior significance in order to serve them at the best.</p>
+            <p>Our management team comprises of people, who are bound by their interest in patent system and contribute to each others understanding of the subject. Here are the people behind</p>
         </div>
 
         <div class="row">
