--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <h1>Welcome to Shapez Patent and Illustrator
              Drawings</h1>
           <!-- <h2>
-            We prepare utility drawings, including mechanical, microphotographs, flow charts, DNA sequencing, computer screen shots and many others for submission to the US Patent Office by Patent Attorneys.
+            We prepare utility drawings, including mechanical, microphotographs, All Text Jobs, DNA sequencing, computer screen shots and many others for submission to the US Patent Office by Patent Attorneys.
 
           </h2>
           <h2 hidden>
@@ -157,13 +157,13 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              We prepare utility drawings, including mechanical, microphotographs, flow charts, DNA sequencing, computer screen shots and many others for submission to the US Patent Office by Patent Attorneys.
+              We prepare utility drawings, including mechanical, microphotographs, All Text Jobs, DNA sequencing, computer screen shots and many others for submission to the US Patent Office by Patent Attorneys.
               We Provide
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Design patents</li>
               <li><i class="ri-check-double-line"></i> Drafting</li>
-              <li><i class="ri-check-double-line"></i> Flow Charts</li>              
+              <li><i class="ri-check-double-line"></i> All Text Jobs</li>              
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
@@ -244,7 +244,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4><a href="">Flow charts</a></h4>
+              <h4><a href="">All Text Jobs</a></h4>
               <p>We provide high quality design patent drawing services includes</p>
                 <ul style="text-align: left; padding-left: 1rem;">                  
                   <li>fast delivery(1-2days)</li> 
@@ -733,7 +733,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>Shapez@gmail.com</p>
+                <p>shapez.patent@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -810,7 +810,7 @@
               Barath nagar, Moosapet <br>
             Hyderabad, Telangana, 500028.  </p> 
               <strong>Phone:</strong> +91 7989409170<br>
-              <strong>Email:</strong> shivaramm4@gmail.com<br>
+              <strong>Email:</strong> shapez.patent@gmail.com<br>
             </p>
           </div>
 
@@ -831,7 +831,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Design Patent Drawings</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Utility Drawings</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Drafting</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Flow charts</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">All Text Jobs</a></li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="#"></a></li> -->
             </ul>
           </div>
