--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <li data-filter=".filter-app">Dp</li>
           <li data-filter=".filter-card">Utility</li>
           <li data-filter=".filter-app">Draftings</li>
-          <li data-filter=".filter-web">Flowcharts</li>
+          <li data-filter=".filter-web">All Text Jobs</li>
         </ul>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
